tests/baselines/reference/computedPropertyNames24_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames24_ES5.ts(7,6): error TS2466: 'super' cannot be referenced in a computed property name.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames24_ES5.ts (1 errors) ====
    class Base {
        bar() {
            return 0;
        }
    }
    class C extends Base {
        [super.bar()]() { }
         ~~~~~
!!! error TS2466: 'super' cannot be referenced in a computed property name.
    }